docs/archive/deploy/k8s/docs-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: production
  labels:
    app: docs
spec:
  selector:
    app: docs
  ports:
  - name: http
    port: 80
    targetPort: http
